Fixed row overlap, added multi-row/column function

--- a/src/components/Gallery.module.scss
+++ b/src/components/Gallery.module.scss
@@ -18,20 +18,38 @@
       max-width: 2400px;
     }
     .griditem {
-      height: 100%;
+      height: 210px;
     }
   }
 
 @media only screen and (min-width: 1000px) {
     .gallery {
       grid-template-columns: repeat(4, 1fr);
-      grid-template-rows: repeat(3, 150px);
+      grid-template-rows: repeat(50, 210px);
       width: 80%;
       max-width: 1300px;
     }
-    .gridcontainer {
-      &:nth-of-type(8) { grid-column: 2 / span 2; grid-row: 1 / span 2; }
-      &:nth-of-type(5) { grid-column: 1 / span 3; grid-row: 3 / span 3; }
-      &:nth-of-type(54) { grid-column: 4; grid-row: 1 / span 3;}
+    .griditem {
+      width: 100%;
+      height: 210px;
+    }
+    .griditembig {
+      width: 100%;
+      height: 435px;
+      grid-column: span 2;
+      grid-row: span 2;
+      object-fit: cover;
+    }
+    .griditemportrait {
+      width: 100%;
+      height: 435px;
+      grid-row: span 2;
+      object-fit: cover;
+    }
+    .griditemlandscape {
+      width: 100%;
+      height: 210px;
+      grid-column: span 2;
+      object-fit: cover;
     }
   }
